/**
 * Contrato para cálculo da mensalidade.
 */
public interface Mensalidade {

    /**
     * Calcula a mensalidade.
     * @return
     */
    float mensalidade();

}
